--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,4 +7,21 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+
+    <style name="button_style" parent="AppTheme">
+
+        <item name="android:background">@color/colorAccent</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:gravity">center</item>
+    </style>
+
+    <style name="edit_Text" parent="AppTheme">
+
+        <item name="android:background">@color/plus_color</item>
+        <item name="android:textColor">@color/colorGrayStatus</item>
+        <item name="android:textColorHint">@color/colorAccent</item>
+        <item name="android:paddingLeft">10dp</item>
+        <item name="android:inputType">number</item>
+    </style>
+
 </resources>
